deployments/istio/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crud-app-demo-1-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: crud-app-demo-1
          servicePort: 8080
      - path: /.*
        backend:
          serviceName: crud-app-demo-1
          servicePort: 8080
