deployments/istio/ingress-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crud-app-demo-1
spec:
  host: crud-app-demo-1.dev.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 2000
        connectTimeout: 10s
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 500
    outlierDetection:
      consecutiveErrors: 3
      interval: 1m
      baseEjectionTime: 5m
      maxEjectionPercent: 100
