deployments/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: crud-app-demo-1-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crud-app-demo-1
spec:
  hosts:
  - "*"
  gateways:
  - crud-app-demo-1-gateway
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /
    route:
    - destination:
        host: crud-app-demo-1
        port:
          number: 8080
