deployments/istio/ingress-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crud-app-demo-1
spec:
  hosts:
  - crud-app-demo-1
  http:
  - route:
    - destination:
        host: crud-app-demo-1
        subset: v1
