deployments/istio/ingress-vc-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: crud-app-demo-1-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crud-app-demo-1
spec:
  hosts:
  - "*"
  gateways:
  - crud-app-demo-1-gateway
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /
    route:
    - destination:
        host: crud-app-demo-1.dev.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 99
    - destination:
        host: crud-app-demo-1.dev.svc.cluster.local
        subset: v2
        port:
          number: 8080
      weight: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crud-app-demo-1
spec:
  host: crud-app-demo-1.dev.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
        connectTimeout: 10s
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
